<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_Container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:minHeight="@dimen/collaps_tb_min_height"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/tool_bar">

                <LinearLayout
                    android:id="@+id/ll_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ll_back_margin_50"
                    android:background="@color/light_gray"
                    android:fitsSystemWindows="true"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/margin_16"
                    android:paddingVertical="@dimen/margin_16"
                    app:layout_collapseMode="parallax">

                    <TextView
                        android:id="@+id/tv_Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_24"
                        android:textStyle="bold"
                        tools:text="@string/title" />

                    <TextView
                        android:id="@+id/tv_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        tools:text="@string/desc" />

                </LinearLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tool_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:layout_collapseMode="pin">

                    <LinearLayout
                        android:id="@+id/ll_Back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:layout_marginTop="@dimen/margin_16">

                        <ImageView
                            android:id="@+id/img_Back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_back" />

                        <TextView
                            android:id="@+id/tv_Back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/back"
                            android:textColor="@color/red_play"
                            android:textSize="@dimen/text_size_16"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tv_playlist_margin_105"
                        android:layout_marginTop="@dimen/margin_16"
                        android:text="@string/playlist_with_capital"
                        android:textColor="@color/red_play"
                        android:textSize="@dimen/text_size_20"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <TextView
                android:id="@+id/tv_number_of_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginVertical="@dimen/margin_16"
                android:textSize="@dimen/text_size_12"
                app:layout_collapseMode="parallax"
                tools:text="@string/number_of_video_series" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:layout_marginEnd="@dimen/margin_16"
            android:backgroundTint="@color/red_play"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play"
            android:tint="@color/white"
            app:fabCustomSize="@dimen/fab_size"
            app:layout_anchor="@id/ll_main"
            app:layout_anchorGravity="bottom|end"
            app:maxImageSize="@dimen/fab_icon_size" />

        <include
            android:id="@+id/include_recycler_view"
            layout="@layout/detail_content_scrolling" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/red"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/no_connection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <include
                android:id="@+id/no_internet_connection_include"
                layout="@layout/no_internet_connection" />
        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>

